--- a/src/Datadog.NativeLoader/Datadog.NativeLoader.vcxproj
+++ b/src/Datadog.NativeLoader/Datadog.NativeLoader.vcxproj
@@ -215,6 +215,9 @@
       <FileType>Document</FileType>
     </CopyFileToFolders>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="CMakeLists.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
