--- a/.azure-pipelines/third-party-test-suites.yml
+++ b/.azure-pipelines/third-party-test-suites.yml
@@ -9,9 +9,19 @@ schedules:
     - master
   always: true
 
+# Global variables
 variables:
+  buildConfiguration: Release
+  dotnetCoreSdk5Version: 5.0.103
+  relativeTracerHome: /src/bin/windows-tracer-home
+  relativeArtifacts: /src/bin/artifacts
+  ddTracerHome: $(System.DefaultWorkingDirectory)/src/bin/dd-tracer-home
+  tracerHome: $(System.DefaultWorkingDirectory)/src/bin/windows-tracer-home
+  artifacts: $(System.DefaultWorkingDirectory)/src/bin/artifacts
   ddApiKey: $(DD_API_KEY)
   DD_DOTNET_TRACER_MSBUILD:
+  NugetPackageDirectory: $(System.DefaultWorkingDirectory)/packages
+  relativeNugetPackageDirectory: packages
 
 # Declare the datadog agent as a resource to be used as a pipeline service
 resources:
@@ -25,101 +35,72 @@ resources:
       DD_INSIDE_CI: true
 
 stages:
-# The job definitions for this stage are copy/pasted from the runner.yml file
-- stage: build_dotnet_tool
-  variables:
-    publishOutput: $(System.DefaultWorkingDirectory)/src/bin/managed-publish
-    dotnetCoreSdk5Version: 5.0.103
+- stage: build_windows
+  dependsOn: []
   jobs:
-
-  - job: build_linux_profiler
-
-    steps:
-    - task: UseDotNet@2
-      displayName: install dotnet core sdk 5.0
-      inputs:
-        packageType: sdk
-        version: $(dotnetCoreSdk5Version)
-        includePreviewVersions: true
-
-    - task: DotNetCoreCLI@2
-      displayName: dotnet build Datadog.Trace.ClrProfiler.Managed.Loader
-      inputs:
-        command: build
-        projects: src/Datadog.Trace.ClrProfiler.Managed.Loader/Datadog.Trace.ClrProfiler.Managed.Loader.csproj
-        arguments: --configuration Release
-
-    - task: DotNetCoreCLI@2
-      displayName: dotnet publish Datadog.Trace.ClrProfiler.Managed 2.0
-      inputs:
-        command: publish
-        publishWebProjects: false
-        modifyOutputPath: false
-        zipAfterPublish: false
-        projects: src/Datadog.Trace.ClrProfiler.Managed/Datadog.Trace.ClrProfiler.Managed.csproj
-        arguments: --configuration Release --framework netstandard2.0 --output $(publishOutput)/netstandard2.0
-
-    - task: DotNetCoreCLI@2
-      displayName: dotnet publish Datadog.Trace.ClrProfiler.Managed 3.1
-      inputs:
-        command: publish
-        publishWebProjects: false
-        modifyOutputPath: false
-        zipAfterPublish: false
-        projects: src/Datadog.Trace.ClrProfiler.Managed/Datadog.Trace.ClrProfiler.Managed.csproj
-        arguments: --configuration Release --framework netcoreapp3.1 --output $(publishOutput)/netcoreapp3.1
-        
-    - task: DockerCompose@0
-      displayName: docker-compose run Profiler
-      inputs:
-        containerregistrytype: Container Registry
-        dockerComposeCommand: run -e buildConfiguration=Release Profiler
-
-    - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.ClrProfiler.Native/bin/Release/x64
-      displayName: Uploading linux tracer home artifact
-      artifact: linux-tracer-home
-
-  - job: macos_profiler
+  - job: build
     pool:
-      vmImage: macOS-10.15
+      vmImage: windows-2019
     steps:
+    - template: steps/install-dotnet-5-sdk.yml
 
-    - task: UseDotNet@2
-      displayName: install dotnet core runtime 3.1
-      inputs:
-        packageType: runtime
-        version: 3.1.x
+    - script: build.cmd BuildTracerHome
+      displayName: Build tracer home
 
-    - task: UseDotNet@2
-      displayName: install dotnet core sdk 5.0
-      inputs:
-        packageType: sdk
-        version: $(dotnetCoreSdk5Version)
+    - publish: $(tracerHome)
+      displayName: Upload Windows tracer home directory
+      artifact: windows-tracer-home
 
-    - task: DotNetCoreCLI@2
-      displayName: dotnet build
-      inputs:
-        command: build
-        configuration: Release
-        arguments: /nowarn:netsdk1138
-        projects: |
-          src/Datadog.Trace.ClrProfiler.Managed.Loader/Datadog.Trace.ClrProfiler.Managed.Loader.csproj
+    - publish: $(System.DefaultWorkingDirectory)
+      displayName: Upload working directory after the managed build
+      artifact: build-windows-working-directory
 
-    - script: |
-        cd ./src/Datadog.Trace.ClrProfiler.Native
-        cmake . -DCMAKE_BUILD_TYPE=Release
-        make
-      displayName: build_profiler
+- stage: build_linux
+  dependsOn: []
+  jobs:
+  - job: build
+    dependsOn: []
+    strategy:
+      matrix:
+        debian:
+          matrixName: debian
+          poolName: Azure Pipelines
+          vmImage: ubuntu-18.04
+          baseImage: debian
+    pool:
+      name: $(poolName)
+      vmImage: $(vmImage)
 
-    - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.ClrProfiler.Native/bin
-      displayName: Uploading macos profiler artifact
-      artifact: macos-profiler
+    steps:
+    - template: steps/run-in-docker.yml
+      parameters:
+        build: true
+        target: builder
+        baseImage: $(baseImage)
+        command: "Clean BuildTracerHome ZipTracerHome"
 
+    - publish: $(tracerHome)
+      displayName: Uploading linux tracer home artifact
+      artifact: linux-tracer-home-$(matrixName)
+
+    - publish: $(artifacts)/linux-x64
+      condition: ne(variables['matrixName'], 'arm64')
+      displayName: Upload linux-x64 packages
+      artifact: linux-packages-$(matrixName)
+
+    - publish: $(artifacts)/linux-arm64
+      condition: eq(variables['matrixName'], 'arm64')
+      displayName: Upload linux-arm64 packages
+      artifact: linux-packages-$(matrixName)
+
+    - publish: $(System.DefaultWorkingDirectory)
+      displayName: Upload working directory after the build
+      artifact: build-linux-$(matrixName)-working-directory
+
+- stage: dotnet_tool
+  dependsOn: [build_windows, build_linux]
+  jobs:
   - job: build_runner_tool_and_standalone
-    dependsOn:
-    - build_linux_profiler
-    - macos_profiler
-    condition: succeeded()
 
     pool:
       vmImage: windows-2019
@@ -129,25 +110,28 @@ stages:
       dd_agent: dd_agent
 
     steps:
-    - download: current
-      artifact: linux-tracer-home
-      patterns: '**/*.so'
+    - template: steps/install-dotnet-5-sdk.yml
+    - template: steps/restore-working-directory.yml
 
-    - task: CopyFiles@2
-      displayName: Copying native linux binary from previous job
+    - task: DownloadPipelineArtifact@2
+      displayName: Download windows tracer home
       inputs:
-        sourceFolder: $(Pipeline.Workspace)/linux-tracer-home
-        targetFolder: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/home/linux-x64
+        artifact: windows-tracer-home
+        patterns: "!integrations.json"
+        path: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/home
 
-    - download: current
-      artifact: macos-profiler
-      patterns: '**/*.dylib'
-
-    - task: CopyFiles@2
-      displayName: Copying native macos binary from previous job
+    - task: DownloadPipelineArtifact@2
+      displayName: Download linux tracer home
       inputs:
-        sourceFolder: $(Pipeline.Workspace)/macos-profiler
-        targetFolder: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/home/osx-x64
+        artifact: linux-tracer-home-debian
+        patterns: "**/*.so"
+        path: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/home/linux-x64
+
+    # Skip task "Download alpine tracer home"
+
+    # Skip task "Download arm64 tracer home"
+
+    # Skip task "Download osx tracer home"
 
     # Install the tracer latest stable release to attach the profiler to the build and test steps.
     # The script exposes the required environment variables to the following steps
@@ -156,102 +140,48 @@ stages:
       inputs:
         filePath: ./.azure-pipelines/setup_tracer.ps1
 
-    - task: UseDotNet@2
-      displayName: install dotnet core runtime 2.1
-      inputs:
-        packageType: runtime
-        version: 2.1.x
+    - script: build.cmd BuildRunnerTool --skip
+      displayName: Build Runner tool
 
-    - task: UseDotNet@2
-      displayName: install dotnet core runtime 3.0
-      inputs:
-        packageType: runtime
-        version: 3.0.x
-
-    - task: UseDotNet@2
-      displayName: install dotnet core runtime 3.1
-      inputs:
-        packageType: runtime
-        version: 3.1.x
-        
-    - task: UseDotNet@2
-      displayName: install dotnet core sdk 5.0
-      inputs:
-        packageType: sdk
-        version: $(dotnetCoreSdk5Version)
-        includePreviewVersions: true
-        
-    - task: DotNetCoreCLI@2
-      displayName: dotnet build
-      inputs:
-        command: build
-        configuration: Release
-        arguments: -l:DatadogLogger,"$(DD_DOTNET_TRACER_MSBUILD)"
-        projects: |
-          src/**/*.csproj
-          !src/Datadog.Trace.Tools.Runner/*.csproj
-      env:
-        DD_SERVICE: dd-trace-dotnet
-        
-    - task: NuGetToolInstaller@1
-      displayName: install nuget
-
-    - task: NuGetCommand@2
-      displayName: nuget restore
-      inputs:
-        restoreSolution: Datadog.Trace.Native.sln
-        verbosityRestore: Normal
-
-    - task: MSBuild@1
-      displayName: tool build
-      inputs:
-        solution: src/Datadog.Trace.Tools.Runner/Datadog.Trace.Tools.Runner.proj
-        msbuildArguments: /t:BuildTool /l:DatadogLogger,"$(DD_DOTNET_TRACER_MSBUILD)"
-        maximumCpuCount: true
-      env:
-        DD_SERVICE: dd-trace-dotnet-runner-tool
-
-    - task: MSBuild@1
-      displayName: standalone build
-      inputs:
-        solution: src/Datadog.Trace.Tools.Runner/Datadog.Trace.Tools.Runner.proj
-        msbuildArguments: /t:BuildStandalone /l:DatadogLogger,"$(DD_DOTNET_TRACER_MSBUILD)"
-        maximumCpuCount: true
-      env:
-        DD_SERVICE: dd-trace-dotnet-runner-tool
+    - script: build.cmd BuildStandaloneTool --skip
+      displayName: Build Standalone tool
 
     - task: DeleteFiles@1
       displayName: 'Remove unneeded files'
       inputs:
         Contents: |
-          $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/Release/Tool/!(*.nupkg)
-          $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/win-x64/home*
-          $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/win-x86/home*
-          $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/linux-x64/home*
-          $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/osx-x64/home*
+          $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/$(buildConfiguration)/Tool/!(*.nupkg)
+          $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/$(buildConfiguration)/Console/publish/win-x64/home*
+          $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/$(buildConfiguration)/Console/publish/win-x86/home*
+          $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/$(buildConfiguration)/Console/publish/linux-x64/home*
+          $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/$(buildConfiguration)/Console/publish/linux-musl-x64/home*
+          $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/$(buildConfiguration)/Console/publish/linux-arm64/home*
+          $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/$(buildConfiguration)/Console/publish/osx-x64/home*
 
-    - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/Release/Tool
+    - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/$(buildConfiguration)/Tool
       displayName: Uploading runner dotnet tool artifact
       artifact: runner-dotnet-tool
 
-    - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/win-x64
+    - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/$(buildConfiguration)/Console/publish/win-x64
       displayName: Uploading runner standalone win-x64 artifact
       artifact: runner-standalone-win-x64
-      
-    - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/win-x86
+
+    - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/$(buildConfiguration)/Console/publish/win-x86
       displayName: Uploading runner standalone win-x86 artifact
       artifact: runner-standalone-win-x86
-      
-    - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/linux-x64
+
+    - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/$(buildConfiguration)/Console/publish/linux-x64
       displayName: Uploading runner standalone linux-x64 artifact
       artifact: runner-standalone-linux-x64
 
-    - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/osx-x64
-      displayName: Uploading runner standalone osx-x64 artifact
-      artifact: runner-standalone-osx-x64
+    # Skip task "Uploading runner standalone linux-musl-x64 artifact"
+
+    # Skip task "Uploading runner standalone linux-arm64 artifact"
+
+    # Skip task "Uploading runner standalone osx-x64 artifact"
 
 - stage: run_tests
-  dependsOn: build_dotnet_tool
+  dependsOn: dotnet_tool
   jobs:
   - job: Postgres
     strategy:
@@ -419,13 +349,13 @@ stages:
       condition: startsWith(variables['imageName'], 'windows')
 
     - script: |
-        dd-trace --merge-spans --dd-env CI --dd-service npgsql.tests --dd-version v4.1.9 dotnet "test npgsql/test/Npgsql.Tests --logger trx;LogFileName=npgsql.tests.$(tagName).trx --results-directory npgsql/test/results"
+        dd-trace --dd-env CI --dd-service npgsql.tests --dd-version v4.1.9 dotnet "test npgsql/test/Npgsql.Tests --logger trx;LogFileName=npgsql.tests.$(tagName).trx --results-directory npgsql/test/results"
       env:
         DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
       displayName: Test
 
     - script: |
-        dd-trace --merge-spans --dd-env CI --dd-service npgsql.plugintests --dd-version v4.1.9 dotnet "test npgsql/test/Npgsql.PluginTests --logger trx;LogFileName=npgsql.plugintests.$(os).$(tagName).trx --results-directory npgsql/test/results"
+        dd-trace --dd-env CI --dd-service npgsql.plugintests --dd-version v4.1.9 dotnet "test npgsql/test/Npgsql.PluginTests --logger trx;LogFileName=npgsql.plugintests.$(os).$(tagName).trx --results-directory npgsql/test/results"
       env:
         DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
       displayName: Test Plugins
