--- a/src/Datadog.NativeLoader/CMakeLists.txt
+++ b/src/Datadog.NativeLoader/CMakeLists.txt
@@ -111,11 +111,13 @@ elseif(ISLINUX)
 endif()
 if (BIT64)
     add_compile_options(-DBIT64 -DHOST_64BIT)
+else()
+    add_compile_options(-DBIT86 -DHOST_X86)
 endif()
 if (ISAMD64)
     add_compile_options(-DAMD64)
 elseif (ISX86)
-    add_compile_options(-DBX86 -DHOST_X86)
+    add_compile_options(-DX86)
 elseif (ISARM64)
     add_compile_options(-DARM64)
 elseif (ISARM)
