--- a/src/Datadog.NativeLoader/loader.conf
+++ b/src/Datadog.NativeLoader/loader.conf
@@ -1,5 +1,6 @@
-{846F5F1C-F9AE-4B07-969E-05C26BC060D8};C:\github\dd-trace-dotnet\src\bin\windows-tracer-home\win-x64\Datadog.Trace.ClrProfiler.Native.dll
-{846F5F1C-F9AE-4B07-969E-05C26BC060D8};/Users/tony.redondo/repos/github/DataDog/dd-trace-dotnet/bin/tracer-home/Datadog.Trace.ClrProfiler.Native.dylib
+{846F5F1C-F9AE-4B07-969E-05C26BC060D8};win-x64;C:\github\dd-trace-dotnet\src\bin\windows-tracer-home\win-x64\Datadog.Trace.ClrProfiler.Native.dll
+{846F5F1C-F9AE-4B07-969E-05C26BC060D8};win-x86;C:\github\dd-trace-dotnet\src\bin\windows-tracer-home\win-x86\Datadog.Trace.ClrProfiler.Native.dll
+{846F5F1C-F9AE-4B07-969E-05C26BC060D8};osx-x64;/Users/tony.redondo/repos/github/DataDog/dd-trace-dotnet/bin/tracer-home/Datadog.Trace.ClrProfiler.Native.dylib
 
-{BD1A650D-AC5D-4896-B64F-D6FA25D6B26A};C:\github\profiler\_build\bin\Debug-x64\ProfilerEngine\Datadog.AutoInstrumentation.Profiler.Native.Windows\Datadog.AutoInstrumentation.Profiler.Native.x64.dll
+{BD1A650D-AC5D-4896-B64F-D6FA25D6B26A};win-x64;C:\github\profiler\_build\bin\Debug-x64\ProfilerEngine\Datadog.AutoInstrumentation.Profiler.Native.Windows\Datadog.AutoInstrumentation.Profiler.Native.x64.dll
 
