--- a/.azure-pipelines/ultimate-pipeline.yml
+++ b/.azure-pipelines/ultimate-pipeline.yml
@@ -213,7 +213,7 @@ stages:
           testResultsFormat: VSTest
           testResultsFiles: build_data/results/**/*.trx
         condition: succeededOrFailed()
-        
+
     - job: native
       steps:
       - template: steps/install-dotnet.yml
@@ -254,7 +254,7 @@ stages:
           testResultsFormat: VSTest
           testResultsFiles: build_data/results/**/*.trx
         condition: succeededOrFailed()
-        
+
 
 
 - stage: unit_tests_linux
@@ -292,7 +292,7 @@ stages:
         testResultsFormat: VSTest
         testResultsFiles: build_data/results/**/*.trx
       condition: succeededOrFailed()
-      
+
     - task: PublishPipelineArtifact@1
       inputs:
         targetPath: 'build_data/results/'
@@ -339,10 +339,22 @@ stages:
     timeoutInMinutes: 100
     strategy:
       matrix:
-        x64:
+        x64_integration:
           platform: x64
-        x86:
+          target: BuildAndRunWindowsIntegrationTests
+          requiresCosmos: true
+        x86_interation:
           platform: x86
+          target: BuildAndRunWindowsIntegrationTests
+          requiresCosmos: true
+        x64_regression:
+          platform: x64
+          target: BuildAndRunWindowsRegressionTests
+          requiresCosmos: false
+        x86_regression:
+          platform: x86
+          target: BuildAndRunWindowsRegressionTests
+          requiresCosmos: false
 
     steps:
     - template: steps/install-dotnet-sdks.yml
@@ -355,9 +367,10 @@ stages:
         Import-Module "C:/Program Files/Azure Cosmos DB Emulator/PSModules/Microsoft.Azure.CosmosDB.Emulator"
         Start-CosmosDbEmulator -Timeout 300
       displayName: 'Start CosmosDB Emulator'
+      condition: eq(variables.requiresCosmos, true)
       workingDirectory: $(Pipeline.Workspace)
 
-    - script: build.cmd BuildAndRunWindowsIntegrationTests --PrintDriveSpace --code-coverage
+    - script: build.cmd $(target) --PrintDriveSpace --code-coverage
       displayName: Run integration tests
 
     - task: PublishTestResults@2
@@ -366,7 +379,7 @@ stages:
         testResultsFormat: VSTest
         testResultsFiles: build_data/results/**/*.trx
       condition: succeededOrFailed()
-      
+
     - task: PublishPipelineArtifact@1
       inputs:
         targetPath: 'build_data/results/'
@@ -955,7 +968,7 @@ stages:
 
       steps:
       - template: steps/restore-working-directory.yml
-    
+
       - task: DownloadPipelineArtifact@2
         inputs:
           patterns: '**/coverage.cobertura.xml'
@@ -967,7 +980,7 @@ stages:
           targetdir: '$(Build.SourcesDirectory)\coveragereport'
           sourcedirs: '$(Build.SourcesDirectory);..'
           reporttypes: 'Cobertura'
-     
+
       - task: PublishCodeCoverageResults@1
         inputs:
           codeCoverageTool: 'Cobertura'
