Fail the test result publish when there are failing tests. This is currently expected for v5 of the npgsql tests

--- a/.azure-pipelines/third-party-test-suites.yml
+++ b/.azure-pipelines/third-party-test-suites.yml
@@ -235,4 +235,5 @@ stages:
         testResultsFormat: VSTest
         testResultsFiles: npgsql/test/**/*.trx
         testRunTitle: Postgres-$(os)-$(tagName)
+        failTaskOnFailedTests: true
       condition: succeededOrFailed()
