Initial guid tests

--- a/test/Datadog.NativeLoader.Tests/Datadog.NativeLoader.Tests.vcxproj
+++ b/test/Datadog.NativeLoader.Tests/Datadog.NativeLoader.Tests.vcxproj
@@ -140,7 +140,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Datadog.NativeLoader.Tests.cpp" />
+    <ClCompile Include="guid_test.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
