--- a/test/Datadog.NativeLoader.Tests/Datadog.NativeLoader.Tests.vcxproj.filters
+++ b/test/Datadog.NativeLoader.Tests/Datadog.NativeLoader.Tests.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Datadog.NativeLoader.Tests.cpp">
+    <ClCompile Include="guid_test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
