--- a/src/Datadog.NativeLoader/Datadog.NativeLoader.vcxproj
+++ b/src/Datadog.NativeLoader/Datadog.NativeLoader.vcxproj
@@ -190,7 +190,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="class_factory.h" />
+    <ClInclude Include="cor_profiler_class_factory.h" />
     <ClInclude Include="cor_profiler.h" />
     <ClInclude Include="guid.h" />
     <ClInclude Include="logging.h" />
@@ -202,7 +202,7 @@
     <ClInclude Include="util.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="class_factory.cpp" />
+    <ClCompile Include="cor_profiler_class_factory.cpp" />
     <ClCompile Include="cor_profiler.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="miniutf.cpp" />
